Added analyse and evaluation code in eval_qualitative_findings folder

--- a/dataset_code_and_files/cidaut_code.ipynb
+++ b/dataset_code_and_files/cidaut_code.ipynb
@@ -7442,14 +7442,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV file saved at: blur_scores_with_labels.csv\n"
+      "CSV file saved at: val_img_blur_scores_with_labels.csv\n"
      ]
     }
    ],
@@ -7548,8 +7548,11 @@
     "    df.to_csv(output_csv_path, index=False)\n",
     "    print(f\"CSV file saved at: {output_csv_path}\")\n",
     "\n",
-    "output_csv = \"blur_scores_with_labels.csv\"\n",
-    "generate_blur_scores_csv(train_real_directory, train_fake_directory, output_csv)\n"
+    "output_csv = \"val_img_blur_scores_with_labels.csv\"\n",
+    "dataset_path = \"/home/joey/CIDAUT/\"\n",
+    "val_real_directory = os.path.join(dataset_path, \"Val_CNN\", \"Real\")\n",
+    "val_fake_directory = os.path.join(dataset_path, \"Val_CNN\", \"Fake\")\n",
+    "generate_blur_scores_csv(val_real_directory, val_fake_directory, output_csv)\n"
    ]
   },
   {
